# ChangeLog for xfce-base/libxfce4mcs
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-base/libxfce4mcs/ChangeLog,v 1.77 2007/01/23 16:40:51 welp Exp $

  23 Jan 2007; Peter Weller <welp@gentoo.org> libxfce4mcs-4.4.0.ebuild:
  Removing usage of virtual/x11,  and hardcoding in depends. Minor clean ups.

*libxfce4mcs-4.4.0 (22 Jan 2007)

  22 Jan 2007; Joshua Nichols <nichoj@gentoo.org> +libxfce4mcs-4.4.0.ebuild:
  Version bump.

  06 Jan 2007; Joshua Nichols <nichoj@gentoo.org>
  libxfce4mcs-4.3.99.2.ebuild:
  Added IUSE=debug, which was dropped when 'inherit debug' was removed from
  xfce44.eclass.

  07 Dec 2006; Joshua Nichols <nichoj@gentoo.org>
  -libxfce4mcs-4.3.90.1.ebuild, -libxfce4mcs-4.3.90.2.ebuild:
  Pruned old versions with new versions with same or better keywords.

*libxfce4mcs-4.3.99.2 (07 Dec 2006)

  07 Dec 2006; Joshua Nichols <nichoj@gentoo.org>
  +libxfce4mcs-4.3.99.2.ebuild:
  Version bump for RC2. See bug #146563.

  02 Dec 2006; Tiziano Müller <dev-zero@gentoo.org>
  libxfce4mcs-4.2.2-r1.ebuild, libxfce4mcs-4.2.3.ebuild:
  ~x86-fbsd keyword added

  13 Nov 2006; Bryan Østergaard <kloeri@gentoo.org>
  libxfce4mcs-4.2.3.ebuild:
  Stable on Alpha.

  13 Jul 2006; Aron Griffis <agriffis@gentoo.org> libxfce4mcs-4.2.3.ebuild:
  Mark 4.2.3 stable on ia64

*libxfce4mcs-4.3.90.2 (10 Jul 2006)

  10 Jul 2006; Brad Cowan <bcowan@gentoo.org> +libxfce4mcs-4.3.90.2.ebuild:
  Xfce beta 2 builds

  09 Jul 2006; Joshua Kinard <kumba@gentoo.org> libxfce4mcs-4.2.3.ebuild:
  Marked stable on mips.

  22 Apr 2006; Markus Rothe <corsair@gentoo.org> libxfce4mcs-4.2.3.ebuild:
  Stable on ppc64

  20 Apr 2006; Mike Doty <kingtaco@gentoo.org> libxfce4mcs-4.2.3.ebuild:
  amd64 stable, bug 129371

*libxfce4mcs-4.3.90.1 (20 Apr 2006)

  20 Apr 2006; Daniel Ostrow <dostrow@gentoo.org>
  +libxfce4mcs-4.3.90.1.ebuild:
  Version bump for 4.4_beta1.

  17 Apr 2006; Michael Hanselmann <hansmi@gentoo.org>