@@ -9,14 +9,14 @@ EBUILD libxfce4mcs-4.3.99.2.ebuild 632 RMD160 ecfcbb93820213826d99b9639c7bb8be79
 MD5 c403f7828cfb31b77b632ff5c81f45e3 libxfce4mcs-4.3.99.2.ebuild 632
 RMD160 ecfcbb93820213826d99b9639c7bb8be799c0dbc libxfce4mcs-4.3.99.2.ebuild 632
 SHA256 bedbaabb1bf5f529311956f4ddfe5b81df6c2953d51162b7004baf9241d43ea7 libxfce4mcs-4.3.99.2.ebuild 632
-EBUILD libxfce4mcs-4.4.0.ebuild 595 RMD160 a5771cb37721bc177356103814daa79aa94b7156 SHA1 200131fc5f298cdbafb2376d0e4cd97f2313153a SHA256 cd20226fe1e7bebfda60a72f763c92b0c88ee7269fbb986f5ff13ddb7058d25b
-MD5 76a2e6ecfeaaf7bd756360f10198c6ba libxfce4mcs-4.4.0.ebuild 595
-RMD160 a5771cb37721bc177356103814daa79aa94b7156 libxfce4mcs-4.4.0.ebuild 595
-SHA256 cd20226fe1e7bebfda60a72f763c92b0c88ee7269fbb986f5ff13ddb7058d25b libxfce4mcs-4.4.0.ebuild 595
-MISC ChangeLog 9521 RMD160 b8292fa3c0ecc206d248ef15c9097ca0339d67e1 SHA1 f874f57813b7e57c9418abee028a85bd6e3ffd0e SHA256 a7a2db0543e1e6b1b90c64b66b780a13c4f59d71dd5470ab90698b38398d6e62
-MD5 cf294e3c4dfb91351bd2cc9d4b68e246 ChangeLog 9521
-RMD160 b8292fa3c0ecc206d248ef15c9097ca0339d67e1 ChangeLog 9521
-SHA256 a7a2db0543e1e6b1b90c64b66b780a13c4f59d71dd5470ab90698b38398d6e62 ChangeLog 9521
+EBUILD libxfce4mcs-4.4.0.ebuild 710 RMD160 f01438fd31dee7bbcd07f6d16073a26d58eebc94 SHA1 a92127b085009f361aeeca012b8298fd079b8554 SHA256 425d527174c96f9c5218a20c88ff7439f7c1ed79c4df76f5b06f412eafd863ad
+MD5 dcfaa8fb8d3921c7a46f5c28a50dc075 libxfce4mcs-4.4.0.ebuild 710
+RMD160 f01438fd31dee7bbcd07f6d16073a26d58eebc94 libxfce4mcs-4.4.0.ebuild 710
+SHA256 425d527174c96f9c5218a20c88ff7439f7c1ed79c4df76f5b06f412eafd863ad libxfce4mcs-4.4.0.ebuild 710
+MISC ChangeLog 9627 RMD160 ce0b60a4e27c42f2d5fdfcbe9a26514038c3025c SHA1 3a0ca3ed50ab5d5d2dc7075c4437b8b184b4b0f8 SHA256 c2a1301855c7035507fbf30ee2ccfbe10fe00379f3d809cff7cc27e8dd725326
+MD5 67cfed15a593e5052b1d3461c7dcac59 ChangeLog 9627
+RMD160 ce0b60a4e27c42f2d5fdfcbe9a26514038c3025c ChangeLog 9627
+SHA256 c2a1301855c7035507fbf30ee2ccfbe10fe00379f3d809cff7cc27e8dd725326 ChangeLog 9627
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 MD5 c390804e060ffd11a5bbb143434b2b2d metadata.xml 157
 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 metadata.xml 157
