@@ -1,23 +1,25 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/libxfce4mcs/libxfce4mcs-4.4.0.ebuild,v 1.2 2007/01/23 16:40:51 welp Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/libxfce4mcs/libxfce4mcs-4.4.0.ebuild,v 1.3 2007/01/28 12:51:34 welp Exp $
 
 inherit xfce44
 
 xfce44
 
-DESCRIPTION="Libraries for Xfce4"
-LICENSE="LGPL-2"
+DESCRIPTION="Core library"
 KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86"
-IUSE="debug"
+IUSE="debug doc startup-notification"
 
-RDEPEND=">=xfce-base/libxfce4util-${XFCE_MASTER_VERSION}
-	>=dev-libs/glib-2
-	>=x11-libs/gtk+-2.4
-	x11-libs/libX11
-	x11-libs/libICE
-	x11-libs/libSM"
+RDEPEND="x11-libs/libX11
+	x11-libs/libSM
+	>=dev-libs/glib-2.6
+	>=x11-libs/gtk+-2.6
+	>=xfce-base/libxfce4util-${XFCE_MASTER_VERSION}
+	startup-notification? ( x11-libs/startup-notification )"
 DEPEND="${RDEPEND}
-	x11-proto/xproto"
+	dev-util/pkgconfig
+	doc? ( dev-util/gtk-doc )"
+
+DOCS="AUTHORS ChangeLog NEWS README TODO"
 
 xfce44_core_package
